--- a/style.css
+++ b/style.css
@@ -9,10 +9,6 @@
 html, body {
     width: 100vw; /* Ocupa todo el ancho de la pantalla */
     height: 100vh; /* Ocupa toda la altura de la pantalla */
-    background-color: #FFF3E0; 
-    display: flex;
-    justify-content: center;
-    align-items: center;
 }
 
 /* Contenedor principal del juego */
@@ -72,6 +68,11 @@ html, body {
     grid-template: repeat(20, 1fr) / repeat(20, 1fr);
 }
 
+.sprite {
+	width: 100%;
+	height: 100%;
+}
+
 /* Serpiente */
 .snake {
     background-color: #FFCC80;
@@ -124,7 +125,11 @@ html, body {
 
 /* Ocultar controles en computadoras */
 .control__buttons {
-    display: none;
+	width: fit-content;
+	height: fit-content;
+	display: none;
+	align-items: center;
+	justify-items: center;
 }
 
 /* Botones de dirección */
@@ -182,33 +187,29 @@ html, body {
 }
 
 /* Media Query para tablets y móviles */
-@media screen and (max-width: 1024px) {
-    .contenedor__principal {
-        align-items: flex-start;
-    }
+@media screen and (max-width: 500px) {
+	.contenedor__principal {
+		align-items: flex-start;
+	}
 
-    .contenedor__2do {
-        width: 90%;
-        height: 90%;
-    }
+	.contenedor__2do {
+		width: 300px;
+		height: 350px;
+	}
 
-    .score__board {
-        font-size: 18px;
-    }
+	.score__board {
+		font-size: 18px;
+	}
 
-    /* Mostrar botones en dispositivos móviles */
-    .control__buttons {
-        display: flex !important;
-        justify-content: center;
-        gap: 10px;
-        margin-top: 10px;
-    }
+	.control__buttons {
+		display: flex;
+	}
 
-    #game_over {
-        font-size: 32px;
-    }
+	#game_over {
+		font-size: 32px;
+	}
 
-    #rejugar {
-        font-size: 14px;
-    }
+	#rejugar {
+		font-size: 14px;
+	}
 }
